# bolt-parquet-reader

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: reader_cli.rs
src/: lib.rs
src/bridge/: boolean_bridge.rs  bridge_base.rs  byte_array_bridge.rs  float32_bridge.rs  float64_bridge.rs  int32_bridge.rs  int64_bridge.rs  mod.rs  raw_bridge.rs  result_bridge.rs
src/column_reader/: column_reader_base.rs  fixed_length_column_reader.rs  mod.rs  primitive_column_reader.rs
src/file_reader/: local_file_reader.rs  mod.rs  row_group_reader.rs
src/filters/: boolean_filter.rs  const_filter.rs  filter.rs  fixed_length_filter.rs  float_point_range_filter.rs  integer_range_filter.rs  mod.rs
src/metadata/: mod.rs  page_header.rs  parquet.thrift  parquet_footer.rs  parquet_metadata_thrift.rs  utils.rs
src/page_reader/: mod.rs
src/sample_files/: boolean_column.parquet  boolean_column_with_nulls.parquet  data_page_with_nulls  lineitem.parquet  lineitem_dictionary.parquet  linitem_plain_data_page  plain_float_column.parquet  plain_float_column_with_nulls.parquet  plain_integer_column.parquet  plain_integer_column_with_nulls.parquet  plain_row_group_with_nulls_gzip.parquet  rle_bp_bigint_column.parquet  rle_bp_bigint_column_with_nulls.parquet  rle_bp_double_column.parquet  rle_bp_double_column_with_nulls.parquet  rle_bp_float_column.parquet  rle_bp_float_column_with_nulls.parquet  rle_bp_integer_column.parquet  rle_bp_integer_column_with_nulls.parquet  rle_bp_row_group_gzip.parquet  rle_bp_row_group_with_nulls_gzip.parquet  (+2 more)
(+44 files in other folders)
